# entropy_governed_medallion_demo

./: .codacy.yaml  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.codacy/: codacy.yaml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  commit-convention.yml  release.yml
data/sample/: employees_drifted.csv
docs/: generate_visuals.py  technical-approach.md
notebooks/: 04_entropy_deep_dive.py
src/entropy_governed_medallion/: __init__.py
src/entropy_governed_medallion/config/: __init__.py
src/entropy_governed_medallion/contracts/: __init__.py  models.py
src/entropy_governed_medallion/entropy/: __init__.py  baseline.py  drift_detector.py  shannon.py
src/entropy_governed_medallion/evidence/: __init__.py
src/entropy_governed_medallion/gates/: __init__.py  evaluator.py
src/entropy_governed_medallion/provenance/: __init__.py  builder.py
src/entropy_governed_medallion/resources/: __init__.py
src/entropy_governed_medallion/resources/config/: __init__.py  kpi_thresholds.json
src/entropy_governed_medallion/resources/sample/: __init__.py  employees_sample.csv
src/entropy_governed_medallion/runners/: __init__.py  __main__.py  local_demo.py
src/entropy_governed_medallion/seams/: __init__.py  entropy_capture.py  fidelity.py  materialization.py  quality_rules.py
tests/: test_drift_detection.py  test_gate_evaluator.py  test_integration.py
