[project]
name = "entropy-governed-medallion-demo"
version = "0.1.0"
description = "Entropy-governed Bronze/Silver/Gold medallion pipeline demo for Azure Databricks"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Anthony Johnson", email = "anthony@etherealogic.com" },
]
requires-python = ">=3.10"
keywords = [
    "databricks",
    "data-quality",
    "entropy",
    "shannon-entropy",
    "medallion-architecture",
    "drift-detection",
    "data-governance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pyspark>=3.5.0",
]

[project.urls]
Homepage = "https://github.com/Org-EthereaLogic/entropy_governed_medallion_demo"
Repository = "https://github.com/Org-EthereaLogic/entropy_governed_medallion_demo"
Issues = "https://github.com/Org-EthereaLogic/entropy_governed_medallion_demo/issues"
Changelog = "https://github.com/Org-EthereaLogic/entropy_governed_medallion_demo/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]
docs = [
    "matplotlib>=3.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = ["pyproject.toml:version"]
tag_format = "$version"

[tool.hatch.build.targets.wheel]
packages = ["src/entropy_governed_medallion"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
